5px padding on forms, fixed some spacing in style.css

--- a/style.css
+++ b/style.css
@@ -30,7 +30,8 @@ dt:hover + dd{
 	background-color: purple}
 
 form {
-	border: solid thin; padding: px;}
+	border: solid thin; 
+	padding: 5 px;}
 
 div.outer-content{
 	position: relative;
